tests/neg/parse_error4.scala
class Main {
  def main = {
    if true then 0
  }
}